--- a/package.json
+++ b/package.json
@@ -6,14 +6,24 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ElianJ09/GitRepository_Express_Workshop.git"
+  },
   "keywords": [
     "api",
     "rest",
     "express",
-    "nodejs"
+    "nodejs",
+    "jwl",
+    "mysql"
   ],
   "author": "Elian RG",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ElianJ09/GitRepository_Express_Workshop/issues"
+  },
+  "homepage": "https://github.com/ElianJ09/GitRepository_Express_Workshop#readme",
   "dependencies": {
     "express": "^4.18.2"
   }
