--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Installing a init by npm package, like a API for ExpressJS",
   "main": "index.js",
   "scripts": {
+    "start": "node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,6 +26,7 @@
   },
   "homepage": "https://github.com/ElianJ09/GitRepository_Express_Workshop#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^3.0.1"
   }
 }
