--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Installing a init by npm package, like a API for ExpressJS",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
+    "start": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,6 +27,8 @@
   "homepage": "https://github.com/ElianJ09/GitRepository_Express_Workshop#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "nodemon": "^3.0.1"
   }
 }
